crates/pluresdb-px/tests/conformance_corpus/invalid/01_missing_colon_in_constraint.px
constraint broken_constraint
  when: score > 10
  require: approved == true
  severity: error
